fixed overflow bug on add contact

--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -272,13 +272,19 @@
   display: flex;
   align-items: center;
   width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 8px;
 }
 
 .input-form {
   width: 100%;
   padding: 13px 21px;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd;
+  border-radius: 8px; */
+  width: 90%;
+  border: unset;
   border-radius: 8px;
+  text-overflow: ellipsis;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px ;
